{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 134,
  "lineage": "b2fc1a07-57d8-86d1-3a1e-34526fc16c7b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434832190675:security-group/sg-09fe6c434425d95dc",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09fe6c434425d95dc",
            "ingress": [],
            "name": "terraform-20240722154200360200000001",
            "name_prefix": "terraform-",
            "owner_id": "434832190675",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a86ef74bb75e2ef8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_link",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434832190675:security-group/sg-0506acee13fe64492",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0506acee13fe64492",
            "ingress": [],
            "name": "vpc-link",
            "name_prefix": "",
            "owner_id": "434832190675",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a86ef74bb75e2ef8"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}